--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProductProgamming04042025-6c749381-4793-4d77-ad43-0121014daec1;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=product_programming_04042025;Username=postgres;Password="
+    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProductProgamming04042025-6c749381-4793-4d77-ad43-0121014daec1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
