--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=product_programming_04042025;Username=postgres;Password="
-    //"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProductProgamming04042025-6c749381-4793-4d77-ad43-0121014daec1;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -9,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel":{
+    "Endpoints": {
+      "Host":{"Url": "http://192.168.43.3:80"}
+    }
+  }
 }
