--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=product_programming_04042025;Username=postgres;Password="
+    "DefaultConnection": "Host=localhost;Port=5432;Database=product_programming_04042025;Username=postgres;Password=1"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   "AllowedHosts": "*",
   "Kestrel":{
     "Endpoints": {
-      "Host":{"Url": "http://192.168.43.3:80"}
+      "Host":{"Url": "http://192.168.171.176:80"}
     }
   }
 }
