--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAI": {
+    "ApiKey": "",
+    "ModelName": ""
+  }
 }
