--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -11,6 +11,13 @@
   "AllowedHosts": "*",
   "AzureAI": {
     "ApiKey": "",
-    "ModelName": ""
+    "ModelName": "gpt-4o-mini"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Host":{
+        "Url": ""
+      }
+    }
   }
 }
