Конечные правки по фронту

--- a/ProductProgamming04042025/appsettings.json
+++ b/ProductProgamming04042025/appsettings.json
@@ -16,7 +16,7 @@
   "Kestrel": {
     "Endpoints": {
       "Host":{
-        "Url": ""
+        "Url": "https://192.168.171.176"
       }
     }
   }
